--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+Matt Wright - Data Science Course Divergence 
 Something you learned last weekend
 	I learned what I might want to do for the possible Capstone Project. Played in the SQL tutorial
 
