--- a/Vania's Folder/todo.txt
+++ b/Vania's Folder/todo.txt
@@ -1,2 +1,3 @@
 I was sick last weekend, so I am reviewing the recordings and I will get back to you on what I learned.
 I would like to learn how to a logistic regression model in Python
+Build an ML model that can predict which candidate is most likely to take the job.
