--- a/Jason's Folder/todo.txt
+++ b/Jason's Folder/todo.txt
@@ -1,8 +1,12 @@
+01/23:
 Different algorithms and recommended use cases.
 I'll probably split off from here and treat the rest of my time to work on the Capstone, so similar to Del Days. I'm just focusing on Power Platform this weekend.
 Capstone prep: I sent an email/invitation to what I'm working on. 
   Projected Pipeline  
     >Maybe build one more page on the PowerApp (New user registration/confirmation for custom form update) 
     >Design a PowerAutomate Workflow that I can actually integrate into my current environment (not necessarily tied to Capstone)
-    >Possibly run my Pbix through AzureML but really focused on it.
+    >Possibly run my Pbix through AzureML but I'm not really focused on it.
     >Ideally, my goal at this point is to fully grasp the connectibility of 365 in relation to the Teams environment.
+    
+01/24: 
+https://divergenceone.sharepoint.com/sites/Capstone_Test_Trinidad
